Clarify what makes user_name invalid

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -27,3 +27,9 @@ en:
     attributes:
       teacher:
         screen_name: "Teacher ID"
+    errors:
+      models:
+        teacher:
+          attributes:
+            user_name:
+              invalid: "can't have any spaces"
