Clarify what makes screen_name invalid

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -33,3 +33,5 @@ en:
           attributes:
             user_name:
               invalid: "can't have any spaces"
+            screen_name:
+              invalid: "must be alphanumeric"
